# etter-backend

./: .gitignore  AGENTS.md  Dockerfile  OPTIMIZATION_INDEX.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_SUMMARY.md  PROJECT_OPTIMIZATION_GUIDE.md  QUICK_START_OPTIMIZATIONS.md  README.md  README_OPTIMIZATION.md  env_example.txt  requirements.txt  ruff.toml  uvicorn_config.py
draup_world_model/: pyproject.toml
draup_world_model/digital_twin/: __init__.py  automation.py  config.py  docker-compose.yml
draup_world_model/workforce_twin_modeling/: INTEGRATION.md  __init__.py  main.py  run_ui.py
etter-workflows/: .gitignore  README.md  demo.py  pyproject.toml  test_all_apis.py  test_api.py  test_pharmacist_e2e.py  test_qa_api.py  test_qa_temporal.py
etter-workflows/automated_workflow_outputs/: automated_workflow_20260129_153043_a06a3109.json  automated_workflow_20260129_181454_7cf5dbaf.json  automated_workflow_20260130_135731_64c17e5a.json  automated_workflow_20260130_140054_098661d2.json  automated_workflow_20260130_140357_604c9d8c.json  automated_workflow_20260130_142511_cd1206cc.json  automated_workflow_20260130_142642_cb7e7440.json  automated_workflow_20260130_142744_fa9e2dd3.json
etter-workflows/docs/: API.md  BATCH_PROCESSING.md  DEPLOYMENT.md  LINK_JD_API_UPDATE.md  PACKAGE_CONTEXT.md  api_endpoints.md  etter_self_service_exploration.md  etter_self_service_implementation_plan.md  input_documents_api.md
etter-workflows/etter_workflows/: __init__.py  (+1 more)
etter-workflows/etter_workflows.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+552 files in other folders)
