[project]
name = "workforce-twin-modeling"
version = "1.0.0"
description = "Enterprise Workforce Digital Twin — Simulation & Analysis Engine"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["workforce_twin_modeling*"]
