[project]
name = "etter-workflows"
version = "0.1.0"
description = "Self-Service Pipeline for Etter - Temporal-based workflow orchestration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "temporalio>=1.0.0",
    "pydantic>=2.0.0",
    "redis>=4.0.0",
    "neo4j>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
etter-worker = "etter_workflows.worker:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["etter_workflows*"]
